# cpf-tax-estimator

./: .gitignore
backend/: Dockerfile  compose.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: cpf_allocation.py  cpf_contribution.py  tax_rate.py  wage_ceiling.py
backend/app/repositories/: cpf_repo.py  tax_repo.py
backend/app/routers/: calculator.py
backend/app/schemas/: calculate_request.py  cpf.py  estimate_request.py  response_wrapper.py  tax.py
backend/app/scripts/: seed.py
backend/app/seed_data/: pr_cpf_rates.csv  tax_rates.json  wage_ceilings.json
backend/app/services/: cpf_service.py  tax_service.py
backend/app/tests/: conftest.py
backend/app/tests/cpf_calculation/: test_allocation.py  test_contribution.py
backend/app/tests/tax_calculation/: test_tax.py
backend/app/tests/test_cpf_service/: test_allocation.py  test_contribution.py
backend/app/tests/test_repo/: test_cpf_repo.py  test_tax_repo.py
backend/app/tests/test_route/: test_calculator.py
backend/app/tests/test_router/: test_calculator.py
backend/app/tests/test_tax_calculation/: test_tax.py
backend/app/tests/test_tax_service/: test_tax.py
backend/app/utils/: utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  client.js  index.css
frontend/src/components/: AllocationSection.jsx  CitizenshipRadioGroup.jsx  ContributionForm.jsx  ContributionSection.jsx  CurrencyInput.jsx  FormResult.jsx  Header.jsx  InputSummary.jsx  Landing.jsx  MonthYearPicker.jsx  Result.jsx  ResultAccordion.jsx  (+2 more)
(+11 files in other folders)
